# upcoming-book-releases

./: CHANGELOG.md  Cargo.toml  README.md  TODOs  authors
src/: authors.rs  cli.rs  customtypes.rs  format.rs  logger.rs  main.rs  releases.rs  scraper.rs  tests.rs
src/format/: format_tests.rs
src/releases/: releases_tests.rs
src/scraper/: scraper_tests.rs
src/tests/: authors_tests.rs  format_tests.rs  releases_tests.rs  scraper_tests.rs  test_authors
