[package]
name = "upcoming_book_releases"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
chrono = "0.4.33"
env_logger = "0.11.1"
headless_chrome = "1.0.9"
linecount = "0.1.0"
log = "0.4.20"
tokio = { version = "1.35.1", features = ["full"] }

[dev-dependencies]
serial_test = "3.0.0"
