[package]
name = "upcoming_book_releases"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
chrono = "0.4.33"
clap = { version = "4.5.1", features = ["derive"] }
env_logger = "0.11.1"
linecount = "0.1.0"
log = "0.4.20"
regex = "1.10.3"
reqwest = "0.11.24"
scraper = "0.18.1"
tokio = { version = "1.35.1", features = ["full"] }

[dev-dependencies]
serial_test = "3.0.0"
